# octoshell-bot

./: CMakeLists.txt  Dockerfile  README.md
contrib/: json2pb.cc
proto/: CMakeLists.txt  user_state.proto
resources/: en.properties  ru.properties
src/: CMakeLists.txt  context.cpp  context.h  handlers.cpp  main.cpp  model.h  mongo.cpp  mongo.h  translate.cpp  translate.h
src/client/: client.h  telegram.cpp  telegram.h  vkontakte.cpp  vkontakte.h
src/proto/: user_state.proto
src/resources/: app.properties  en.properties  ru.properties
src/src/: auth_status.cpp  auth_status.h  context.cpp  context.h  fwd.h  handlers.cpp  handlers.h  main.cpp  model.h  mongo.cpp  mongo.h  octoshell.cpp  octoshell.h
src/src/client/: client.h  telegram.cpp  telegram.h  util.cpp  util.h  vkontakte.cpp  vkontakte.h
src/src/states/: auth_new_email_state_processor.h  auth_settings_state_processor.cpp  main_menu_state_processor.cpp  states_holder.cpp  ticket_cluster_choose_state_processor.cpp  ticket_cluster_choose_state_processor.h  ticket_message_choose_state_processor.cpp  ticket_message_choose_state_processor.h  ticket_project_choose_state_processor.cpp  ticket_project_choose_state_processor.h  (+4 more)
src/states/: auth_new_email_state_processor.cpp  auth_new_token_state_processor.cpp  auth_new_token_state_processor.h  auth_settings_state_processor.h  locale_settings_state_processor.cpp  locale_settings_state_processor.h  main_menu_state_processor.cpp  main_menu_state_processor.h  state_processor.h  states_holder.cpp  states_holder.h
uml/: http.uml
